--- a/deptrai.html
+++ b/deptrai.html
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-<p>Dep trai lam co tinh de conflig </p>
-=======
-<p>Dep trai lam ke toi</p>
->>>>>>> dfd0566 (add file deptrai.html)
+<p>Dep trai lam ke toi thif ma lam sao</p>
